Fixed some alignment
WIP to see how things look on mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
 }
 
 #textbox-wrap {
-    position: relative;
+    /* position: relative; */
     background-color: rgba(255, 255, 255, .5);
     border-radius: 1em;
     padding-top: 1em;
@@ -53,9 +53,6 @@ p {
 
 .carousel-item {
     width: 800px;
-}
-.mia-pictures {
-    max-height: 400px;
 }
 
 .nav-link {
